plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency)
    alias(libs.plugins.dotenv)
    alias(libs.plugins.spotless)
}

group = 'co.uk.stefanpuia'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.bundles.jackson
    implementation libs.spring.web
    implementation libs.mapstruct
    implementation libs.spring.shell.starter
    implementation libs.spring.boot.starter.validation
    implementation libs.jgit
    implementation libs.commons.compress
    implementation libs.azure.storage.blob
    implementation libs.azure.identity
    implementation libs.bundles.docker
    implementation libs.string.template

    compileOnly libs.immutables

    annotationProcessor libs.spring.boot.configuration.processor
    annotationProcessor libs.lombok
    annotationProcessor libs.immutables
    annotationProcessor libs.mapstruct.processor

    testImplementation libs.spring.boot.starter.test
    testImplementation libs.spring.shell.starter.test
    testImplementation libs.slf4j.test
    testImplementation libs.junit.pioneer

    testRuntimeOnly libs.junit.platform.launcher
}

configurations {
    testImplementation.exclude group: "ch.qos.logback"
}

dependencyManagement {
    imports {
        mavenBom libs.azure.bom.get().toString()
        mavenBom libs.spring.shell.dependencies.get().toString()
    }
}

springBoot {
    buildInfo {
        properties {
            version = "0.0.1-alpha-${System.env.BUILD_VERSION ?: 'local'}"
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}", '-Xshare:off'
}

bootRun {
    jvmArgs('-Djava.security.properties=' + file("$rootDir/custom.security").absolutePath)
    environment(System.getenv() + env.allVariables())
    outputs.upToDateWhen { false }
}

spotless {
    java {
        target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
        importOrder()
        removeUnusedImports()
        googleJavaFormat('1.19.2')
                .reflowLongStrings()
                .groupArtifact('com.google.googlejavaformat:google-java-format')
    }
}
